--- a/app/translation/messages.nl.yml
+++ b/app/translation/messages.nl.yml
@@ -1,4 +1,9 @@
-# messages.fr.yml
+# messages.nl.yml
 Symfony is great: Symfony Rocks
 Edit: Aanpassen
 Create: Aanmaken
+Volunteer: Vrijwilliger
+Welcome: Welkom
+We: Wij
+Refugees: Vluchtelingen
+Refugee: Vluchteling
